make arreglado, intento de fork y exec

--- a/lab2 sistope/Makefile
+++ b/lab2 sistope/Makefile
@@ -1,7 +1,7 @@
 CC= gcc
 CFLAGS= -Wall -lm -lniceprint -L .
 out = lab2
-source = lab2.c Funciones.c bomb.c
+source = lab2.c Funciones.c 
 objects = $(source:.c=.o)
 depends = .depends
 headers = Funciones.h
@@ -15,6 +15,7 @@ $(objects):
 
 $(depends): $(source) $(headers)
 	@$(CC) -MM $(source) > $@
+	$(CC) -o bomb bomb.c
 
 clean:
 	$(RM) $(out) $(objects) $(depends)
