--- a/lab2 sistope/.vscode/settings.json
+++ b/lab2 sistope/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "files.associations": {
-    "unistd.h": "c"
+    "unistd.h": "c",
+    "stdio.h": "c",
+    "string.h": "c",
+    "funciones.h": "c"
   },
   "C_Cpp.errorSquiggles": "Enabled",
   "C_Cpp_Runner.cCompilerPath": "gcc",
